--- a/chatterbox.html
+++ b/chatterbox.html
@@ -27,8 +27,11 @@
       <div class="spinner"><img src="client/images/spiffygif_46x46.gif"></div>
       <div id="rooms">
         Room:
-        <select></select>
-        <button>Add Room</button>
+        <select><option value="${newRoom}">newRoom</option></select>
+        <!-- <br />
+        <input type='text' name='add room' />
+        <button>Add Room</button> -->
+
       </div>
       <form action="#" id="send" method="post">
         <input type="text" name="message" id="message"/>
